--- a/index.html
+++ b/index.html
@@ -1,48 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="/maps/documentation/javascript/cgc/demos.css">
-     <style type="text/css">
-      #map {
-        width: 100%;
-        height:  100% ;
-        position: absolute;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map">
-      
-    </div>
-    <script>
-      function initMap() {
-        var location = {lat: 23.810331, lng: 90.412521};
-
-        // Create a map object and specify the DOM element
-        // for display.
-        var map = new google.maps.Map(document.getElementById('map'), {
-          center: location,
-          zoom: 15
-        });
-
-        // Create a marker and set its position.
-        var marker = new google.maps.Marker({
-          map: map,
-          position: location,
-          title: 'Dhaka!',
-        });
-        //  var myLatLng2 = {lat: 23.8103431, lng: 90.412521};
-        //   var marker2 = new google.maps.Marker({
-        //   map: map,
-        //   position:myLatLng2,
-        //   title: 'Hello World!',
-        // });
-      }
-
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyfBGNZetxsOvA_-4AB_cr8_JRfDXUdh4&callback=initMap"
-        ></script>
-
-  </body>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>testing</title>
+</head>
+<body>
+  <h2>hellow world </h2>
+</body>
 </html>
-
